# opengl-renderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  out.md
src/: main.cpp
src/core/: app.cppm  glm.cppm
src/demos/: hello_window.cppm
src/gpu/: gl.cppm
src/math/: glm.cppm
src/platform/: glfw.cppm
src/render/: buffer.cppm  camera.cppm  context.cppm  lights.cppm  material.cppm  mesh.cppm  model.cppm  primitives.cppm  shader.cppm  texture.cppm  tinyobj.cppm  uniforms.cppm  vertex_array.cppm
src/resources/: image.cppm
src/scenes/: hello_square.cppm  hello_triangle.cppm  hello_window.cppm
src/scenes/hello_camera/: cube.frag  cube.vert  scene.cppm
src/scenes/hello_cube/: cube.vert  scene.cppm
src/scenes/hello_obj/: obj.frag  obj.vert  scene.cppm
src/scenes/hello_square/: scene.cppm  square.frag
src/scenes/hello_textures/: scene.cppm  textured.frag  textured.vert
src/scenes/hello_triangle/: scene.cppm
src/scenes/hello_window/: scene.cppm
src/scenes/phong_cube/: phong.frag  phong.vert  scene.cppm
src/scenes/phong_maps/: floor.frag  floor.vert  phong_maps.frag  scene.cppm
src/scenes/sponza/: scene.cppm  sponza.frag
src/ui/: imgui.cppm  imgui_layer.cppm
